--- a/index.html
+++ b/index.html
@@ -663,6 +663,10 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   <h2 class="section-title">Example Datasets</h2>
   <p>Select one — it instantly loads into the input above.</p>
 
+  <p style="margin-top:6px; font-size:13px; color:#b91c1c;">
+🚫 Never use real patients, real claims, or real medical documents here — training data only.
+</p>
+
   <div class="pill-row" style="margin-top:16px;">
     <button class="pill-btn" onclick="loadExample('va')">🎖️ VA Disability Claim</button>
     <button class="pill-btn" onclick="loadExample('medical')">🏥 Medical Note</button>
