--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
     <button class="pill-btn" onclick="loadExample('robot')">🤖 Robotics Command</button>
     <button class="pill-btn" onclick="loadExample('ai')">🧠 AI System Log</button>
     <button class="pill-btn" onclick="loadExample('legal')">⚖️ Legal Filing</button>
-    <button class="pill-btn" onclick="openVinModal()">🚗 2022 Corvette VIN</button>
+    <button class="pill-btn" onclick="openVinModal()">🚗 VIN</button>
   </div>
 </div>
 
@@ -685,7 +685,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   <div style="background:var(--card); padding:26px; border-radius:10px; width:440px;
               border:1px solid var(--border); box-shadow:0 4px 18px rgba(0,0,0,.35);">
 
-    <h3 class="section-title" style="font-size:20px;">2022 Corvette VIN Decoder</h3>
+    <h3 class="section-title" style="font-size:20px;">VIN Decoder</h3>
 
     <input id="vinInput"
            placeholder="Enter VIN (17 characters)"
