--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ html {
 <div class="card" style="margin-top:38px;">
   <h2 class="section-title">Try It — Prove Integrity Yourself</h2>
 <p style="margin-top:6px; font-size:13px; opacity:0.85;">
-This public demo is for educational purposes only — NOT for HIPAA-regulated environments.
+🚫This public demo is for educational purposes only — NOT for HIPAA-regulated environments.
 NOVAK does not collect, store, transmit, or retain data, but user responsibility applies.
 </p>
 
