--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
 <!-- ✅ FOOTER -->
 <footer style="text-align:center; margin-top:60px; font-size:14px; opacity:0.85; line-height:1.5;">
-  NOVAK Protocol — Non-Optional Verification of Algorithmic Knowledge<br>
+  NOVAK Protocol — NOVAK OBJECTIVE VERIFICATION of AUTONONMOUS KNOWLEDGE<br>
   Proof-Before-Action Integrity — Patent Pending — Copyright © 2025 Matthew Novak<br><br>
 
   PADI 30-Year Member #888850 —
