--- a/index.html
+++ b/index.html
@@ -933,6 +933,40 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
 </div> <!-- END MAIN CONTAINER -->
 
+<!-- ✅ Why Hashing Alone Is NOT Enough -->
+<div class="card" style="margin-top:26px;">
+  <h2 class="section-title">How Is This Different Than Today?</h2>
+
+  <p>
+    Today, most systems generate hashes, signatures, logs, or encrypted traffic —
+    but none of those guarantee the <strong>correctness</strong> of automated actions.
+  </p>
+
+  <ul style="margin-left:20px; margin-top:12px; margin-bottom:16px;">
+    <li>✅ Hashing proves data hasn't changed — <strong>after</strong> execution</li>
+    <li>✅ TLS/SSL protects communication — not decision integrity</li>
+    <li>✅ Blockchain records history — it cannot stop bad actions</li>
+    <li>✅ Logging documents failure — it does not prevent it</li>
+    <li>✅ Audits require humans — long after harm already occurred</li>
+  </ul>
+
+  <p style="font-weight:600; margin-bottom:12px;">
+    NOVAK is different:
+  </p>
+
+  <ul style="margin-left:20px; margin-bottom:4px; font-weight:600;">
+    <li>🚫 No cryptographic proof → system is blocked</li>
+    <li>🧩 Input, rule & output must cryptographically match</li>
+    <li>🛑 Prevents fraud, corruption, glitches & silent automation failure</li>
+    <li>🧾 Generates tamper-proof execution receipts instantly</li>
+  </ul>
+
+  <p style="margin-top:14px;">
+    Instead of trusting — NOVAK <strong>verifies before action</strong>.
+  </p>
+</div>
+
+
 <!-- ✅ FULL JAVASCRIPT ENGINE -->
 
 <script>
