--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   NOVAK Protocol — NOVAK OBJECTIVE VERIFICATION of AUTONONMOUS KNOWLEDGE<br>
   Proof-Before-Action — Patent Pending — Copyright © 2025 Matthew Novak<br><br>
 
-  PADI 30-Year Member #888850 —
+  PADI 30-Year Member IDC Staff Instructor #888850 —
   <a href="https://www.padi.com" target="_blank" rel="noopener noreferrer">www.padi.com</a><br>
 
   Star Citizen Referral —
