--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ html[data-theme="dark"] .aud-btn.active {
   <div class="header-center">
     <div id="novakBrand">NOVAK Protocol</div>
     <div id="novakTagline">
-      <strong>NOVAK</strong> = <em>NOVAK OBJECTIVE VERIFICATION of AUTONONMOUS KNOWLEDGE</em>
+      <strong>NOVAK</strong> = <em>Novak Objective Verificationof Autonomous Knowledge</em>
     </div>
     <a id="novakSiteLink"
        href="https://www.novakprotocol.com"
