--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
 <!-- ✅ FOOTER -->
 <footer style="text-align:center; margin-top:60px; font-size:14px; opacity:0.85; line-height:1.5;">
-  NOVAK Protocol — NOVAK OBJECTIVE VERIFICATION of AUTONONMOUS KNOWLEDGE<br>
+  NOVAK Protocol — Novak Objective Verificationof Autonomous Knowledge<br>
   Proof-Before-Action — Patent Pending — Copyright © 2025 Matthew Novak<br><br>
 
   PADI 30-Year Member IDC Staff Instructor #888850 —
