--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ html[data-theme="dark"] .aud-btn.active {
 
     <p style="margin-bottom:10px;">
       <strong>NOVAK</strong> stands for
-      <strong>Non-Overridable Verifiable Audit Kernel</strong>.
+      <strong>Novak Objective Verificationof Autonomous Knowledge</strong>.
       It is a cryptographic “governor” that forces any automated system to prove integrity
       <em>before</em> it is allowed to act.
     </p>
