--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   </p>
 
   <textarea id="novakInput"
-    placeholder="Example: VA claim, invoice, medical note, VIN, contract, JSON, SQL, XML..."
+    placeholder="Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
     style="width:100%; height:170px; margin-top:16px; font-family:'JetBrains Mono', monospace;
            font-size:14px; padding:12px;"></textarea>
 
@@ -734,7 +734,6 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
   <div class="pill-row" style="margin-top:16px;">
     <button class="pill-btn" onclick="loadExample('va')">🎖️ VA Disability Claim</button>
-    <button class="pill-btn" onclick="loadExample('medical')">🏥 Medical Note</button>
     <button class="pill-btn" onclick="loadExample('finance')">💰 Financial Transaction</button>
     <button class="pill-btn" onclick="loadExample('robot')">🤖 Robotics Command</button>
     <button class="pill-btn" onclick="loadExample('ai')">🧠 AI System Log</button>
