--- a/index.html
+++ b/index.html
@@ -794,6 +794,8 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 <!-- ✅ STRUCTURED DATA VALIDATION -->
 <div class="card" style="margin-top:32px;">
   <h2 class="section-title">Validate Structured Data</h2>
+
+  <p>🚫 Never use real patients, real claims, or real medical documents here — training data only.</p>
   <p>Upload JSON, SQL, XML, or TXT — NOVAK proves it hasn’t changed before execution.</p>
 
   <input id="structuredFile"
