--- a/index.html
+++ b/index.html
@@ -707,6 +707,8 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 <div class="card" style="margin-top:22px;">
   <h3 class="section-title" style="font-size:20px;">Verify Any File</h3>
 
+
+   <p> 🚫 Never use real patients, real claims, or real medical documents here — training data only.  </p>
   <p>
     Upload a PDF, medical record, scanned document, CSV, screenshot, legal filing —
     NOVAK proves originality instantly using real cryptography.
