--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
 
   Star Citizen Referral —
   <a href="https://www.robertsspaceindustries.com/enlist?referral=STAR-KRN7-SJTX"
-     target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a><br><br>
+     target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a>" o7"<br><br>
 
   Nothing stored, logged, transmitted, analyzed, monitored, sold, or shared.<br>
   100% local, private, client-side cryptographic verification.
