--- a/index.html
+++ b/index.html
@@ -17,28 +17,30 @@
 
   <style>
 
-/* ✅ Prevent content from sliding under sticky header */
+/* ========== FIX TOP GAP (B) ========== */
 html {
-  scroll-padding-top: 110px; /* matches header height */
+  scroll-padding-top: 70px; /* header height */
 }
 
-/* ✅ When JS scrolls-to content, ensure visibility */
+body {
+  padding-top: 70px;  /* match header height exactly */
+}
+
+/* prevent double stacking */
 .card,
 #audienceContent,
 #explainerOutput,
 #whatChangesCard,
 #whyNovakCard,
+#whatIsNovakCard,
 #hashOutputList,
 #rgac,
 #gameBox,
 #transparencyView,
 #storyPanel {
-  scroll-margin-top: 120px;
+  scroll-margin-top: 80px; /* 80 is perfect spacing */
 }
 
-    body {
-  padding-top: 110px;
-}
 
     
     /* ====================================================================== */
