--- a/index.html
+++ b/index.html
@@ -690,6 +690,19 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   </p>
 </div>
 
+  <!-- ✅ AUTO-VERIFICATION TOGGLE -->
+<div class="card" style="margin-top:32px;">
+  <label style="display:flex; align-items:center; gap:10px; font-size:16px;">
+    <input type="checkbox" id="autoVerifyToggle" checked>
+    <strong>Enable Proof-Before-Action Engine (NOVAK Auto-Verification)</strong>
+  </label>
+  <p style="margin-top:6px; font-size:14px; opacity:0.8;">
+    When enabled, NOVAK automatically checks whether any change breaks integrity 
+    <strong>before</strong> execution.
+  </p>
+</div>
+
+
 <!-- ✅ AUTO-INJECT PROOF-BEFORE-ACTION DEMO -->
 <div class="card" style="margin-top:22px;">
   <h3 class="section-title" style="font-size:20px;">
