--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@ html[data-theme="dark"] .aud-btn.active {
     </button>
   </div>
 
-  <!-- EXPLAINER BUTTONS -->
-  <div style="margin-top:26px;" class="pill-row">
+  <!-- EXPLAINER BUTTONS it was 26 before i changed it to 110-->
+  <div style="margin-top:110px;" class="pill-row">
     <button class="pill-btn explain-btn" onclick="showExplain('simple', this)">🤯 I don't get it</button>
     <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Milkshake Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Colored Pencil Analogy</button>
