--- a/index.html
+++ b/index.html
@@ -556,14 +556,14 @@ html[data-theme="dark"] .aud-btn.active {
     </button>
   </div>
 
-  <!-- EXPLAINER BUTTONS it was 26 before i changed it to 110-->
-  <div style="margin-top:110px;" class="pill-row">
+  <!-- EXPLAINER BUTTONS -->
+  <div style="margin-top:26px;" class="pill-row">
     <button class="pill-btn explain-btn" onclick="showExplain('simple', this)">🤯 I don't get it</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Milkshake Analogy</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Colored Pencil Analogy</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Government Savings</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ Show Me How This Works</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('milkshake', this)">🥤 Milkshake Analogy</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('pencil', this)">🖍️ Colored Pencil Analogy</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('key', this)">🔑 Key Analogy</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('gov', this)">🏛 Government Savings</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('how', this)">👁️ Show Me How This Works</button>
   </div>
 
   <!-- ANALOGY OUTPUT -->
