--- a/index.html
+++ b/index.html
@@ -1047,9 +1047,9 @@ NOVAK does not collect, store, transmit, or retain data, but user responsibility
   PADI 30-Year Member IDC Staff Instructor #888850 —
   <a href="https://www.padi.com" target="_blank" rel="noopener noreferrer">www.padi.com</a><br>
 <br>
-  Star Citizen Referral —
+  o7 Star Citizen Referral —
   <a href="https://www.robertsspaceindustries.com/enlist?referral=STAR-KRN7-SJTX"
-     target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a> o7<br><br>
+     target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a><br><br>
 
   Nothing stored, logged, transmitted, analyzed, monitored, sold, or shared.<br>
   100% local, private, client-side cryptographic verification.
